# Tallow

./: .dev.env  .dockerignore  .env.example  .eslintignore  .gitignore  .lighthouserc.js  .prettierignore  .prettierrc.json  .watchmanconfig  00_START_HERE.md  408_FIX_REFERENCE_CARD.md  408_TIMEOUT_FIX_COMPLETE.md  A11Y_VIOLATIONS_SUMMARY.md  ACCESSIBILITY.md  ACCESSIBILITY_100_PERCENT_COMPLETE.md  ACCESSIBILITY_COMPLETE_FINAL_SUMMARY.md  ACCESSIBILITY_FIXES_COMPLETE_FINAL.md  ACCESSIBILITY_FIXES_PROGRESS.md  ACCESSIBILITY_IMPLEMENTATION_SUMMARY.md  ACCESSIBILITY_MASTER_INDEX.md  ACCESSIBILITY_MINOR_FIXES_COMPLETE.md  ACCESSIBILITY_PROGRESS_SUMMARY.md  ACCESSIBILITY_QUICK_REFERENCE.md  ADVANCED_ENCRYPTION_FEATURES.md  ADVANCED_ENCRYPTION_QUICKSTART.md  ADVANCED_SECURITY.md  AGENTS_CATALOG.md  AGENTS_CATALOG_ADDITION.md  AGENTS_DEPLOYMENT_COMPLETE_2026-01-28.md  AGENTS_SUMMARY.md  ALL_AGENTS_COMPLETE_SUMMARY.md  ALL_TASKS_COMPLETION_PLAN.md  ALL_TESTS_INTEGRATED.md  ANIMATIONS.md  ANIMATIONS_DELIVERY_SUMMARY.md  ANIMATIONS_IMPLEMENTATION_SUMMARY.md  ANIMATIONS_QUICK_REFERENCE.md  ANIMATIONS_TEST_CHECKLIST.md  ANIMATIONS_VISUAL_GUIDE.md  ANIMATION_FILES_REFERENCE.md  (+791 more)
crates/tallow/: Cargo.toml
crates/tallow-crypto/: Cargo.toml
crates/tallow-crypto/benches/: crypto_benchmarks.rs
crates/tallow-crypto/src/: error.rs  lib.rs
crates/tallow-crypto/src/file/: decrypt.rs  encrypt.rs  mod.rs
crates/tallow-crypto/src/hash/: blake3.rs  domain.rs  merkle.rs  mod.rs  sha3.rs
crates/tallow-crypto/src/kdf/: argon2.rs  eff_wordlist.rs  hkdf.rs  mod.rs  password.rs
crates/tallow-crypto/src/kem/: hybrid.rs  mlkem.rs  mod.rs  negotiation.rs  x25519.rs
crates/tallow-crypto/src/keys/: ephemeral.rs  identity.rs  mod.rs  prekeys.rs  rotation.rs  storage.rs
crates/tallow-crypto/src/mem/: constant_time.rs  mod.rs  secure_buf.rs  wipe.rs
crates/tallow-crypto/src/pake/: cpace.rs  mod.rs  opaque.rs
crates/tallow-crypto/src/ratchet/: double.rs  mod.rs  sparse_pq.rs  triple.rs
crates/tallow-crypto/src/sig/: ed25519.rs  file_signing.rs  hybrid.rs  mldsa.rs  mod.rs  slhdsa.rs
crates/tallow-crypto/src/symmetric/: aegis.rs  aes_gcm.rs  chacha20.rs  mod.rs  negotiation.rs  nonce.rs
crates/tallow-crypto/tests/: wasm_compat.rs
crates/tallow-net/: Cargo.toml
crates/tallow-net/src/: error.rs  lib.rs
crates/tallow-net/src/discovery/: dns_sd.rs  lan.rs  mdns.rs  mod.rs
crates/tallow-net/src/nat/: candidates.rs  detection.rs  hole_punch.rs  mod.rs  stun.rs  turn.rs  upnp.rs
crates/tallow-net/src/privacy/: doh.rs  mod.rs  socks5.rs  traffic_analysis.rs
crates/tallow-net/src/relay/: client.rs  directory.rs  mod.rs  resolve.rs
crates/tallow-net/src/signaling/: client.rs  mod.rs  protocol.rs
crates/tallow-net/src/transport/: bandwidth.rs  connection.rs  direct.rs  fallback.rs  mod.rs  negotiation.rs  p2p.rs  peer_channel.rs  proxied.rs  quic.rs  reconnect.rs  tcp_tls.rs  tls_config.rs
crates/tallow-net/tests/: direct_transfer.rs  mdns_discovery.rs  proxy_integration.rs
crates/tallow-protocol/: Cargo.toml
crates/tallow-protocol/proptest-regressions/transfer/: sanitize.txt
crates/tallow-protocol/src/: error.rs  kex.rs  lib.rs  multi.rs
crates/tallow-protocol/src/chat/: encrypt.rs  message.rs  mod.rs  session.rs
crates/tallow-protocol/src/compression/: analysis.rs  brotli.rs  lz4.rs  lzma.rs  mod.rs  pipeline.rs  zstd.rs
crates/tallow-protocol/src/metadata/: filename.rs  mod.rs  stripper.rs
crates/tallow-protocol/src/room/: code.rs  manager.rs  mod.rs  roles.rs
crates/tallow-protocol/src/transfer/: chunking.rs  exclusion.rs  manifest.rs  mod.rs  progress.rs  queue.rs  receive.rs  resume.rs  sanitize.rs  send.rs  state_machine.rs  sync.rs  watch.rs
crates/tallow-protocol/src/wire/: codec.rs  messages.rs  mod.rs  version.rs
crates/tallow-relay/: Cargo.toml
crates/tallow-relay/src/: auth.rs  config.rs  main.rs  rate_limit.rs  room.rs  server.rs  signaling.rs  websocket.rs
crates/tallow-store/: Cargo.toml
crates/tallow-store/src/: error.rs  lib.rs
crates/tallow-store/src/clipboard/: detect.rs  mod.rs  preview.rs
crates/tallow-store/src/config/: aliases.rs  defaults.rs  loader.rs  mod.rs  schema.rs
crates/tallow-store/src/contacts/: database.rs  groups.rs  mod.rs
crates/tallow-store/src/history/: chat.rs  log.rs  mod.rs
crates/tallow-store/src/identity/: fingerprint.rs  keypair.rs  mod.rs
crates/tallow-store/src/persistence/: encrypted_kv.rs  mod.rs  paths.rs
crates/tallow-store/src/trust/: levels.rs  mod.rs  tofu.rs
crates/tallow-tui/: Cargo.toml
crates/tallow-tui/src/: app.rs  event.rs  lib.rs  modes.rs  render.rs  security.rs  theme.rs
crates/tallow-tui/src/overlays/: help.rs  mod.rs
crates/tallow-tui/src/panels/: devices.rs  hotkey_bar.rs  mod.rs  status.rs  transfers.rs
crates/tallow-tui/src/widgets/: accessibility.rs  bandwidth_chart.rs  chat_input.rs  chat_view.rs  color_system.rs  device_card.rs  device_list.rs  effects.rs  emacs_mode.rs  file_browser.rs  file_preview.rs  file_selector.rs  gradients.rs  high_contrast.rs  keybind_help.rs  keybindings.rs  message_bubble.rs  mod.rs  network_quality.rs  screen_reader.rs  setting_widget.rs  settings_actions.rs  sparkline.rs  (+10 more)
crates/tallow-web/: Cargo.toml
crates/tallow-web/src/: chat.rs  clipboard.rs  codec.rs  crypto.rs  file_io.rs  lib.rs  transfer.rs  transport.rs
crates/tallow-web/tests/: crypto_compat.rs
crates/tallow/src/: cli.rs  exit_codes.rs  hooks.rs  logging.rs  main.rs  runtime.rs  sandbox.rs
tallow-wasm/: .gitignore  Cargo.toml  INTEGRATION.md  LICENSE  Makefile  PERFORMANCE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SECURITY.md
tallow-wasm/.cargo/: config.toml
tallow-wasm/.github/workflows/: ci.yml
tallow-wasm/benches/: crypto_bench.rs
tallow-wasm/examples/: complete_example.html
tallow-wasm/src/: lib.rs
tallow-wasm/src/crypto/: aes_gcm.rs  argon2.rs  blake3.rs  hybrid.rs  mlkem.rs  mod.rs  x25519.rs
tallow-wasm/src/transfer/: chunker.rs  hasher.rs  mod.rs  session.rs
tallow-wasm/src/utils/: memory.rs  mod.rs
tallow-wasm/tests/: integration.rs
(+2902 files in other folders)
