[workspace]
resolver = "2"
members = [
    "crates/tallow-crypto",
    "crates/tallow-net",
    "crates/tallow-protocol",
    "crates/tallow-store",
    "crates/tallow-relay",
    "crates/tallow-tui",
    "crates/tallow",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "AGPL-3.0-or-later"
repository = "https://github.com/tallowteam/Tallow"
description = "The most secure peer-to-peer file transfer CLI tool"
authors = ["Aamir Alam"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
postcard = { version = "1.1", features = ["use-std"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Cryptography (shared)
blake3 = "1"
rand = "0.8"
getrandom = "0.2"
zeroize = { version = "1", features = ["derive"] }
secrecy = "0.10"
subtle = "2"

# Common utilities
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3
overflow-checks = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
