[package]
name = "tallow-wasm"
version = "0.1.0"
authors = ["Tallow Team <team@tallow.app>"]
edition = "2021"
rust-version = "1.75"
description = "High-performance cryptographic WASM module for Tallow"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4.41"
js-sys = "0.3.68"
getrandom = { version = "0.2", features = ["js"] }

# Post-quantum cryptography
pqcrypto-kyber = "0.8.0"
pqcrypto-traits = "0.3.5"

# Classic cryptography
x25519-dalek = "2.0.1"
aes-gcm = "0.10.3"
blake3 = { version = "1.5.0", features = ["rayon", "mmap"] }
argon2 = { version = "0.5.3", features = ["std"] }
chacha20poly1305 = "0.10.1"

# Key derivation
hkdf = "0.12.4"
sha2 = "0.10.8"

# Performance
rayon = "1.8.1"
num_cpus = "1.16.0"

# Utilities
rand = "0.8.5"
zeroize = { version = "1.7.0", features = ["derive"] }
subtle = "2.5.0"
thiserror = "1.0.56"
serde = { version = "1.0.195", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"

# Async
futures = "0.3.30"

# Console logging for debugging
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.68", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.41"
criterion = "0.5.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package."*"]
opt-level = 3

[profile.bench]
inherits = "release"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-simd"]
