[package]
name = "tallow-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cryptographic primitives for Tallow — PQC, symmetric, hashing, PAKE, ratchets"

[features]
default = []
aegis = ["dep:aegis"]
fips = []

[dependencies]
# Post-Quantum KEM (FIPS 203)
fips203 = { version = "0.4", default-features = false, features = ["ml-kem-1024", "default-rng"] }

# Post-Quantum Signatures (FIPS 204, FIPS 205)
fips204 = { version = "0.4", default-features = false, features = ["ml-dsa-87", "default-rng"] }
fips205 = { version = "0.4", default-features = false, features = ["slh_dsa_sha2_256f", "default-rng"] }

# Classical Key Exchange
x25519-dalek = { version = "2", features = ["static_secrets"] }
curve25519-dalek = { version = "4", features = ["rand_core"] }

# Classical Signatures
ed25519-dalek = { version = "2", features = ["rand_core"] }

# Symmetric Encryption
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
aegis = { version = "0.6", optional = true }

# Hashing & KDF
blake3.workspace = true
sha3 = "0.10"
sha2 = "0.10"
argon2 = "0.5"
hkdf = "0.12"

# Key Safety
zeroize.workspace = true
secrecy.workspace = true
subtle.workspace = true

# Randomness
rand.workspace = true
getrandom.workspace = true
rand_core = "0.6"

# Serialization
serde.workspace = true
bincode.workspace = true

# Errors
thiserror.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
hex = "0.4"
tokio = { workspace = true, features = ["test-util"] }

[[bench]]
name = "crypto_benchmarks"
harness = false
