[package]
name = "tallow-net"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Networking layer for Tallow — QUIC, TCP+TLS, mDNS, NAT traversal, relay"

[features]
default = ["quic"]
quic = ["dep:quinn"]
onion = []

[dependencies]
tallow-crypto = { path = "../tallow-crypto" }

# QUIC Transport
quinn = { version = "0.11", optional = true, default-features = false, features = ["runtime-tokio", "rustls-aws-lc-rs"] }

# TLS (aws-lc-rs backend — ring has compile-time assertion bug on macOS ARM)
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "aws_lc_rs"] }
rustls-pemfile = "2"
webpki-roots = "0.26"
tokio-rustls = "0.26"
rcgen = { version = "0.13", default-features = false, features = ["aws_lc_rs"] }

# DNS (v0.25 uses rustls 0.23/aws-lc-rs, removing ring dependency)
hickory-resolver = { version = "0.25", default-features = false, features = ["https-aws-lc-rs", "tokio"] }

# Local Discovery
mdns-sd = "0.11"

# Hex encoding for mDNS TXT records
hex = "0.4"

# Proxy
tokio-socks = "0.5"

# UPnP
igd-next = { version = "0.16", features = ["aio_tokio"] }

# Async
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
bincode.workspace = true

# Utilities
bytes.workspace = true
rand.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
