[package]
name = "tallow-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Wire protocol, file transfer, compression, chat, rooms for Tallow"

[dependencies]
tallow-crypto = { path = "../tallow-crypto" }
tallow-net = { path = "../tallow-net" }

# Compression
zstd = "0.13"
brotli = "7"
lz4_flex = "0.11"
lzma-rs = "0.3"

# File watching
notify = "7"

# File exclusion
ignore = "0.4"

# Tar streaming
tar = "0.4"

# Async
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
postcard.workspace = true

# Utilities
bytes.workspace = true
rand.workspace = true
tracing.workspace = true
thiserror.workspace = true
blake3.workspace = true
zeroize.workspace = true

# Metadata stripping
img-parts = "0.3"
kamadak-exif = "0.5"

# Filename sanitization
strip-ansi-escapes = "0.2"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
proptest = "1"
