[package]
name = "tallow-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Wire protocol, file transfer, compression, chat, rooms for Tallow"

[features]
default = ["full"]
full = [
    "dep:tallow-net",
    "dep:zstd",
    "dep:brotli",
    "dep:lz4_flex",
    "dep:lzma-rs",
    "dep:notify",
    "dep:ignore",
    "dep:tar",
    "dep:tokio",
    "dep:tokio-util",
    "dep:futures",
    "dep:serde_json",
    "dep:bytes",
    "dep:rand",
    "dep:img-parts",
    "dep:kamadak-exif",
    "dep:strip-ansi-escapes",
    "dep:tracing",
]
wasm = []

[dependencies]
tallow-crypto = { path = "../tallow-crypto" }

# Always available (WASM-compatible)
serde.workspace = true
postcard.workspace = true
thiserror.workspace = true
blake3.workspace = true
zeroize.workspace = true
subtle.workspace = true

# Full-only dependencies (gated behind "full" feature)
tallow-net = { path = "../tallow-net", optional = true }

# Compression (full only)
zstd = { version = "0.13", optional = true }
brotli = { version = "7", optional = true }
lz4_flex = { version = "0.11", optional = true }
lzma-rs = { version = "0.3", optional = true }

# File watching (full only)
notify = { version = "7", optional = true }

# File exclusion (full only)
ignore = { version = "0.4", optional = true }

# Tar streaming (full only)
tar = { version = "0.4", optional = true }

# Async (full only)
tokio = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

# Serialization (full only extras)
serde_json = { workspace = true, optional = true }

# Utilities (full only)
bytes = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

# Metadata stripping (full only)
img-parts = { version = "0.3", optional = true }
kamadak-exif = { version = "0.5", optional = true }

# Filename sanitization (full only)
strip-ansi-escapes = { version = "0.2", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
proptest = "1"
