[package]
name = "tallow-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Self-hosted relay server for Tallow file transfers"

[[bin]]
name = "tallow-relay"
path = "src/main.rs"

[dependencies]
tallow-net = { path = "../tallow-net", features = ["quic"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async
tokio.workspace = true

# QUIC Transport
quinn = "0.11"

# TLS / Certs
rustls = "0.23"
rcgen = "0.13"

# Serialization
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
toml = "0.8"

# Utilities
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rand.workspace = true
bytes.workspace = true
dashmap = "6"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
