[package]
name = "tallow-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Self-hosted relay server for Tallow file transfers"

[[bin]]
name = "tallow-relay"
path = "src/main.rs"

[dependencies]
tallow-net = { path = "../tallow-net", features = ["quic"] }
tallow-protocol = { path = "../tallow-protocol" }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async
tokio.workspace = true

# QUIC Transport
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-aws-lc-rs"] }

# TLS / Certs (aws-lc-rs backend)
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "aws_lc_rs"] }
rcgen = { version = "0.13", default-features = false, features = ["aws_lc_rs"] }

# Serialization
postcard.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
toml = "0.8"

# Crypto (password auth)
blake3.workspace = true
subtle.workspace = true

# Security
zeroize.workspace = true

# WebSocket transport (browser clients)
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
futures.workspace = true

# Utilities
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rand.workspace = true
bytes.workspace = true
dashmap = "6"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
