[package]
name = "tallow-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Configuration, persistence, identity, contacts for Tallow"

[dependencies]
tallow-crypto = { path = "../tallow-crypto" }

# Config
toml = "0.8"
dirs = "6"

# Serialization
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true

# Crypto
rand.workspace = true

# Utilities
tracing.workspace = true
thiserror.workspace = true
zeroize.workspace = true
secrecy.workspace = true
blake3.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
