[package]
name = "tallow-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ratatui terminal dashboard for Tallow"

[dependencies]
tallow-crypto = { path = "../tallow-crypto" }
tallow-net = { path = "../tallow-net" }
tallow-protocol = { path = "../tallow-protocol" }
tallow-store = { path = "../tallow-store" }

# TUI Framework
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = { version = "0.28", features = ["event-stream"] }
color-eyre = "0.6"

# Async
tokio.workspace = true
futures.workspace = true

# Screen clearing
clearscreen = "3"

# Utilities
tracing.workspace = true
unicode-width = "0.2"
chrono.workspace = true

[dev-dependencies]
insta = "1"
